force-app/main/default/objects/Canvas_Enrollment__c/Canvas_Enrollment__c.object-meta.xml
<CustomObject>
    <label>Canvas Enrollment</label>
    <nameField>
        <displayFormat>CE-{000000}</displayFormat>
        <label>Canvas Enrollment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canvas Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>