force-app/main/default/objects/Canvas_Enrollment__c/fields/Canvas_Course__c.field-meta.xml
<CustomField>
    <fullName>Canvas_Course__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Canvas Course enrolled.</description>
    <label>Canvas Course</label>
    <referenceTo>Canvas_Course__c</referenceTo>
    <relationshipLabel>Canvas Enrollments</relationshipLabel>
    <relationshipName>Canvas_Enrollments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>