force-app/main/default/objects/Canvas_Enrollment__c/fields/Canvas_Enrollment_Batch__c.field-meta.xml
<CustomField>
    <fullName>Canvas_Enrollment_Batch__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Batch used to create the enrollment.</description>
    <label>Canvas Enrollment Batch</label>
    <referenceTo>Canvas_Enrollment_Batch__c</referenceTo>
    <relationshipLabel>Canvas Enrollments</relationshipLabel>
    <relationshipName>Canvas_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>