force-app/main/default/objects/Canvas_Enrollment__c/fields/Canvas_ID__c.field-meta.xml
<CustomField>
    <fullName>Canvas_ID__c</fullName>
    <description>Unique ID assigned by Canvas</description>
    <externalId>true</externalId>
    <label>Canvas ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>