force-app/main/default/objects/Canvas_Enrollment__c/fields/Creation_Process__c.field-meta.xml
<CustomField>
    <fullName>Creation_Process__c</fullName>
    <formula>IF(
    ISBLANK(Canvas_Enrollment_Batch__c),
    &quot;No Batch&quot;,
    Canvas_Enrollment_Batch__r.CreationProcess__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creation Process</label>
    <type>Text</type>
</CustomField>