force-app/main/default/objects/Canvas_Enrollment__c/fields/Enrolled_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Enrolled Date</label>
    <type>DateTime</type>
</CustomField>