force-app/main/default/objects/Canvas_Enrollment__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead enrolled.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Canvas Enrollments</relationshipLabel>
    <relationshipName>Canvas_Enrollments2</relationshipName>
    <type>Lookup</type>
</CustomField>