force-app/main/default/objects/Canvas_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Enrolled_Date__c</columns>
    <columns>Lead__c</columns>
    <columns>Canvas_Course__c</columns>
    <columns>Creation_Process__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>